--- a/views/default/index.html
+++ b/views/default/index.html
@@ -46,25 +46,25 @@
                 </div>
                 <div class="form-group" id="form_startdate">
                     <div>
-                    Start Date <input type="date" name="start_date">
+                    Start Date: <input type="date" name="start_date">
                     <span class="help-block"></span>
                     </div>
                 </div>
                 <div class="form-group" id="form_enddate">
                     <div>
-                    End Date <input type="date" name="end_date">
+                    End Date: <input type="date" name="end_date">
                     <span class="help-block"></span>
                     </div>
                 </div>                
                 <div class="form-group" id="form_starttime">
                     <div>
-                    Start Time <input type="time" name="start_time">
+                    Start Time: <input type="time" name="start_time">
                     <span class="help-block"></span>
                     </div>
                 </div>
                 <div class="form-group" id="form_endtime">
                     <div>
-                    End Time <input type="time" name="end_time">
+                    End Time: <input type="time" name="end_time">
                     <span class="help-block"></span>
                     </div>
                 </div>                
@@ -96,10 +96,9 @@
                     </div>
                 </div>
                 <div class = "post-content">
-                    Event: ${post.post_content} <br>
-                    Description: ${post.event_description}<br>
-                    ${post.user_name}
-                    <div> Posted ${post.created_on} </div>
+                    <h3> Event: ${post.post_content}<br>
+                    <small>Description: ${post.event_description}</small> </h3><br>
+                    <div> Posted by ${post.user_name} ${post.created_on} </div>
                     <div v-if="post.created_on != post.updated_on">
                           Edited ${post.updated_on}
                     </div>
