updated the logo changes

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -21,7 +21,7 @@
 
 <div class="main_content">
 
-    <img src="http://i.imgur.com/AuYIoll.png" alt="logo" height="110" width="330">
+    <img src="http://i.imgur.com/lRlZM5J.png" alt="logo" height="110" width="330">
 
 	<div id="vue-div" class="display:none">
     <!-- Your code goes here.  Remember to call $("#vue-div").show() once you get the data for the first time. -->
