--- a/views/default/index.html
+++ b/views/default/index.html
@@ -46,25 +46,25 @@
                 </div>
                 <div class="form-group" id="form_startdate">
                     <div>
-                    Start Date: <input type="date" name="start_date">
+                    Start Date: <input type="date" name="start_date" v-model="form_start_date">
                     <span class="help-block"></span>
                     </div>
                 </div>
                 <div class="form-group" id="form_enddate">
                     <div>
-                    End Date: <input type="date" name="end_date">
+                    End Date: <input type="date" name="end_date" v-model="form_end_date">
                     <span class="help-block"></span>
                     </div>
                 </div>                
                 <div class="form-group" id="form_starttime">
                     <div>
-                    Start Time: <input type="time" name="start_time">
+                    Start Time: <input type="time" name="start_time" v-model="form_start_time">
                     <span class="help-block"></span>
                     </div>
                 </div>
                 <div class="form-group" id="form_endtime">
                     <div>
-                    End Time: <input type="time" name="end_time">
+                    End Time: <input type="time" name="end_time" v-model="form_end_time">
                     <span class="help-block"></span>
                     </div>
                 </div>                
@@ -98,6 +98,8 @@
                 <div class = "post-content">
                     <h3> Event: ${post.post_content}<br>
                     <small>Description: ${post.event_description}</small> </h3><br>
+                    Date of event: ${post.start_date} to ${post.end_date} <br>
+                    Time of event: ${post.start_time} to ${post.end_time} <br>
                     <div> Posted by ${post.user_name} ${post.created_on} </div>
                     <div v-if="post.created_on != post.updated_on">
                           Edited ${post.updated_on}
