i think the time display works?

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -96,8 +96,8 @@
                     </div>
                 </div>
                 <div class = "post-content">
-                    <h3> Event: ${post.post_content}<br>
-                    <small>Description: ${post.event_description}</small> </h3><br>
+                    <h3> ${post.post_content}
+                    <small> ${post.event_description}</small> </h3><br>
                     Date of event: ${post.start_date} to ${post.end_date} <br>
                     Time of event: ${post.start_time} to ${post.end_time} <br>
                     <div> Posted by ${post.user_name} ${post.created_on} </div>
