--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -1,3 +1,6 @@
+body {
+  font-family: 'Open Sans', sans-serif;
+}
 /* line 2, ../sass/_main.scss */
 .post_listing {
   margin: 10px 0px 10px 0px;
@@ -11,13 +14,12 @@
 
 /* line 11, ../sass/_main.scss */
 .post {
-  border-color: #cccccc;
-  border-style: solid;
-  border-width: 1px;
-  background: #eeeeee;
+  border-bottom: 1px solid #eeeeee;
   margin: 20px 0px 20px 0px;
   padding: 20px;
-  -moz-border-radius: 16px;
-  -webkit-border-radius: 16px;
-  border-radius: 16px;
+}
+
+.author {
+  color: #55627f;
+  font-weight: bold;
 }
