--- a/views/layout.html
+++ b/views/layout.html
@@ -60,7 +60,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          {{=response.logo or ''}}
+          <!--{{=response.logo or ''}}-->
+            <a href="#"><img src="http://i.imgur.com/lRlZM5J.png" height="65px"/></a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
