--- a/views/layout.html
+++ b/views/layout.html
@@ -108,9 +108,9 @@
     {{block footer}} <!-- this is default footer -->
     <footer class="footer">
       <div class="container-fluid">
-        <div class="copyright pull-left">{{=T('Copyright')}} &#169; {{=request.now.year}}</div>
+        <div class="copyright pull-left"><small>{{=T('Copyright')}} &#169; {{=request.now.year}}</small></div>
           <div id="poweredBy" class="pull-right">
-            {{=T('Powered by')}}
+            <small>{{=T('Powered by')}}</small>
             <a href="http://www.web2py.com/">web2py</a>
           </div>
       </div>
@@ -129,7 +129,5 @@
       });
     </script>
     {{pass}}
-    <!-- Share ============================y============ -->
-    <script src="{{=URL('static','js/share.js',vars=dict(static=URL('static','images')))}}"></script>
   </body>
 </html>
