--- a/views/layout.html
+++ b/views/layout.html
@@ -51,7 +51,8 @@
     <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
     <div class="w2p_flash alert alert-dismissable">{{=response.flash or ''}}</div>
     <!-- Navbar ======================================= -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background-color: #fff;
+        border-bottom: 0px;">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -61,7 +62,7 @@
             <span class="icon-bar"></span>
           </button>
           <!--{{=response.logo or ''}}-->
-            <a href="#"><img src="http://i.imgur.com/lRlZM5J.png" height="65px"/></a>
+            <img src="http://i.imgur.com/lRlZM5J.png" height="65px"/>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
